--- a/public/index.html
+++ b/public/index.html
@@ -7,28 +7,29 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
     <link rel="stylesheet" href="css/thirdparty/bootstrap.css">
     <!--static-->
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <!-- dashboard -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/sb-admin-2.css">
     <link rel="stylesheet" href="css/timeline.css">
+    <!-- ThirdParty -->
     <link rel="stylesheet" href="css/thirdparty/metisMenu.css">
     <link rel="stylesheet" href="css/thirdparty/swipebox.css">
     <link rel="stylesheet" href="css/thirdparty/loading-bar.css">
-    <link rel="stylesheet" href="css/thirdparty/font-awesome.css" type="text/css">
-
+    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.css" type="text/css">
     <!-- static -->
-    <script src="libs/jquery.js"></script>
+    <!--
     <script src="libs/modernizr.custom.js"></script>
     <script type="text/javascript" src="libs/move-top.js"></script>
     <script type="text/javascript" src="libs/easing.js"></script>
     <script src="libs/classie.js"></script>
     <script src="libs/uisearch.js"></script>
-
+    -->
+    <script src="libs/parse-1.6.14.js"></script>
     <!-- dashboard -->
+    <script src="libs/jquery.js"></script>
     <script src="libs/angular.js"></script>
     <script src="libs/bootstrap.js"></script>
     <script src="libs/angular-ui-router.js"></script>
@@ -38,17 +39,21 @@
     <script src="libs/ui-bootstrap-tpls.js"></script>
     <script src="libs/metisMenu.js"></script>
     <script src="libs/Chart.js"></script>
-
     <!-- custom scripts -->
-    <script src="components/main/app.js"></script>
+    <script src="components/mainModule/app.js"></script>
     <script src="js/sb-admin-2.js"></script>
     <script src="js/staticweb.js"></script>
- 
     <!-- static -->
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Alegreya:400,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <!-- Custom Scripts -->
+    <script src="components/login/sessionService.js"></script>
+    <script src="components/login/loginService.js"></script>
+    <script src="components/login/loginController.js"></script>
+    <base href="/"></base>
+</head>
 
-    <body>
-        <div ng-app="sbAdminApp">
-            <div ui-view></div>
-        </div>
+<body>
+    <div ng-app="logiWebMain">
+        <div ui-view></div>
+    </div>
