ng-click fix and other changes

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,8 @@
     <script src="libs/json3.js"></script>
     <script src="libs/ocLazyLoad.js"></script>
     <script src="libs/loading-bar.js"></script>
-    <script src="libs/ui-bootstrap-tpls.js"></script>
+    <!--<script src="libs/ui-bootstrap-tpls.js"></script>-->
+    <script src="libs/ui-bootstrap-tpls-1.0.3.js"></script>
     <script src="libs/metisMenu.js"></script>
     <script src="libs/Chart.js"></script>
     <!-- custom scripts -->
