basic map working

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <script src="libs/parse-1.6.14.js"></script>
     <!-- dashboard -->
     <script src="libs/jquery.js"></script>
+    <script src="libs/lodash.js"></script>
     <script src="libs/angular.js"></script>
     <script src="libs/bootstrap.js"></script>
     <script src="libs/angular-ui-router.js"></script>
