minify+changed home page

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>LogiPort|Home</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="css/thirdparty/bootstrap.css">
+    <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
     <!--static-->
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <!-- dashboard -->
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="css/sb-admin-2.css">
     <link rel="stylesheet" href="css/timeline.css">
     <!-- ThirdParty -->
-    <link rel="stylesheet" href="css/thirdparty/metisMenu.css">
+    <link rel="stylesheet" href="libs/metis-menu/metisMenu.css">
     <link rel="stylesheet" href="css/thirdparty/swipebox.css">
-    <link rel="stylesheet" href="css/thirdparty/loading-bar.css">
+    <link rel="stylesheet" href="libs/angular-loading-bar/loading-bar.css">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.css" type="text/css">
     <!-- static -->
     <!--
@@ -29,18 +29,18 @@
     -->
     <script src="libs/parse-1.6.14.js"></script>
     <!-- dashboard -->
-    <script src="libs/jquery.js"></script>
+    <script src="libs/jquery.min.js"></script>
     <script src="libs/lodash.js"></script>
     <script src="libs/angular.js"></script>
-    <script src="libs/bootstrap.js"></script>
-    <script src="libs/angular-ui-router.js"></script>
-    <script src="libs/json3.js"></script>
-    <script src="libs/ocLazyLoad.js"></script>
-    <script src="libs/loading-bar.js"></script>
+    <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="libs/angular-ui-router.min.js"></script>
+    <script src="libs/json3.min.js"></script>
+    <script src="libs/ocLazyLoad.min.js"></script>
+    <script src="libs/angular-loading-bar/loading-bar.js"></script>
     <!--<script src="libs/ui-bootstrap-tpls.js"></script>-->
-    <script src="libs/ui-bootstrap-tpls-1.0.3.js"></script>
-    <script src="libs/metisMenu.js"></script>
-    <script src="libs/Chart.js"></script>
+    <script src="libs/angular-bootstrap/ui-bootstrap-tpls-1.1.1.min.js"></script>
+    <script src="libs/metis-menu/metisMenu.min.js"></script>
+    <script src="libs/Chart.min.js"></script>
     <!-- custom scripts -->
     <script src="components/mainModule/app.js"></script>
     <script src="js/sb-admin-2.js"></script>
@@ -52,6 +52,7 @@
     <script src="components/login/sessionService.js"></script>
     <script src="components/login/loginService.js"></script>
     <script src="components/login/loginController.js"></script>
+    <script src="components/contactForm/contactFormController.js"></script>
     <base href="/"></base>
 </head>
 
