--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html class="no-js">
 
 <head>
@@ -41,6 +41,10 @@
     <script src="libs/angular-bootstrap/ui-bootstrap-tpls-1.1.1.min.js"></script>
     <script src="libs/metis-menu/metisMenu.min.js"></script>
     <script src="libs/Chart.min.js"></script>
+    <!--maps-->
+    <script src="libs/maps/angular-simple-logger.min.js"></script>
+    <script src="libs/maps/angular-google-maps.min.js"></script>
+    
     <!-- custom scripts -->
     <script src="components/mainModule/app.js"></script>
     <script src="js/sb-admin-2.js"></script>
