--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
 
-    <base href="/"></base>
+    <base href="/" />
 </head>
 
 <body data-spy="scroll" data-target=".header" data-offset="100">
