--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     <script src="libs/angular-bootstrap/ui-bootstrap-tpls-1.1.1.min.js"></script>
     <script src="libs/metis-menu/metisMenu.min.js"></script>
     <script src="libs/Chart.min.js"></script>
+    <script src="libs/flux-angular.min.js"></script>
     <!--maps-->
     <script src="libs/maps/angular-simple-logger.min.js"></script>
     <script src="libs/maps/angular-google-maps.min.js"></script>
@@ -58,9 +59,16 @@
     <script src="components/login/loginController.js"></script>
     <script src="components/contactForm/contactFormController.js"></script>
 
+    <!--data providers-->
+    <script src="components/dataProvider/dataprovider.module.js"></script>
+    <script src="components/dataProvider/events.js"></script>
+    <script src="components/dataProvider/maps.actionhandler.js"></script>
+    <script src="components/dataProvider/maps.datahandler.js"></script>
+    <script src="components/dataProvider/maps.store.js"></script>
+
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
 
-    <base href="/"></base>
+    <base href="/" />
 </head>
 
 <body data-spy="scroll" data-target=".header" data-offset="100">
