--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <!-- dashboard -->
     <script src="libs/jquery.min.js"></script>
     <script src="libs/lodash.js"></script>
-    <script src="libs/angular.js"></script>
+    <script src="libs/angular.min.js"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="libs/angular-ui-router.min.js"></script>
     <script src="libs/json3.min.js"></script>
