assign truck fix

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     <script src="libs/angular-bootstrap/ui-bootstrap-tpls-1.1.1.min.js"></script>
     <script src="libs/metis-menu/metisMenu.min.js"></script>
     <script src="libs/Chart.min.js"></script>
+    <script src="libs/datetime-picker.min.js"></script>
     <!--maps-->
     <script src="libs/maps/angular-simple-logger.min.js"></script>
     <script src="libs/maps/angular-google-maps.min.js"></script>
